[gd_scene load_steps=5 format=3 uid="uid://iojfwl34pyi5"]

[ext_resource type="Script" path="res://CharacterComponents/body_2.gd" id="1_suf7s"]
[ext_resource type="Texture2D" uid="uid://bv8o5ejbgsd28" path="res://Assets/collisioneffect.png" id="2_7kiy7"]
[ext_resource type="AudioStream" uid="uid://d1s8f5vgyq1c3" path="res://Assets/708856__funnyvoices__boomerizer-eu-fx.wav" id="3_qfwy3"]

[sub_resource type="LabelSettings" id="LabelSettings_tly6m"]
font_size = 31
font_color = Color(0, 0, 0, 1)
outline_size = 1

[node name="body2" type="Area2D"]
position = Vector2(553, 312)
collision_layer = 2
script = ExtResource("1_suf7s")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -286.0
offset_top = -131.0
offset_right = 1190.0
offset_bottom = 581.0
scale = Vector2(0.329053, 0.329053)

[node name="hit" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(14, -4)
scale = Vector2(0.446387, 0.446387)
texture = ExtResource("2_7kiy7")

[node name="bumb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qfwy3")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 5
offset_left = -351.0
offset_top = -181.0
offset_right = -247.0
offset_bottom = -134.0
label_settings = SubResource("LabelSettings_tly6m")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
